@@ -108,11 +108,25 @@ def _invalid_regex(repl):
     return _
 
 
+def _trailing_backslashes_regex(m):
+    """Check trailing backslashes.
+
+    Does a head count on trailing backslashes to ensure there isn't an odd
+    one on the end that would escape the brackets we wrap the RE in.
+    """
+    if (len(m) % 2) != 0:
+        warning(u"Regular expressions cannot end with an odd number of '\\'. "
+                "Dropping the final '\\'.")
+        return m[:-1]
+    return m
+
+
 _sub_re = Replacer()
 _sub_re.add(u'^RE:', u'')
 _sub_re.add(u'\((?!\?)', u'(?:')
 _sub_re.add(u'\(\?P<.*>', _invalid_regex(u'(?:'))
 _sub_re.add(u'\(\?P=[^)]*\)', _invalid_regex(u''))
+_sub_re.add(ur'\\+$', _trailing_backslashes_regex)
 
 
 _sub_fullpath = Replacer()
@@ -169,6 +183,7 @@ class Globster(object):
         base_patterns = []
         ext_patterns = []
         for pat in patterns:
+            pat = normalize_pattern(pat)
             if pat.startswith(u'RE:') or u'/' in pat:
                 path_patterns.append(pat)
             elif pat.startswith(u'*.'):
@@ -200,3 +215,12 @@ class Globster(object):
                 return patterns[match.lastindex -1]
         return None
         
+
+def normalize_pattern(pattern):
+    """Converts backslashes in path patterns to forward slashes.
+    
+    Doesn't normalize regular expressions - they may contain escapes.
+    """
+    if not pattern.startswith('RE:'):
+        pattern = pattern.replace('\\','/')
+    return pattern.rstrip('/')
